[package]
name = "actix-web-validation"
description = "A common validation interface for actix-web applications"
version = "0.1.0"
edition = "2021"
authors = ["Ross Sullivan <rosssullivan101@gmail.com>"]
repository = "https://github.com/ranger-ross/actix-web-validation"
license = "MIT"


[dependencies]
actix-web = "4"
futures-core = "0.3"
thiserror = "1"
validator = { version = "0.18", optional = true }
garde = { version = "0.20", optional = true }

[features]

# Use validator crate (https://github.com/Keats/validator) as the validation implmentation
validator = ["dep:validator"]

# Use garde crate (https://github.com/jprochazk/garde) as the validation implmentation
garde = ["dep:garde"]

[package.metadata.docs.rs]
features = ["validator", "garde"]

