[package]
name = "actix-web-validation"
description = "A common validation interface for actix-web applications"
version = "0.5.0"
edition = "2021"
authors = ["Ross Sullivan <rosssullivan101@gmail.com>"]
repository = "https://github.com/ranger-ross/actix-web-validation"
license = "MIT"
# Try to match https://github.com/actix/actix-web/blob/master/Cargo.toml#L22
# Also be sure to update the README MSRV badge
rust-version = "1.72"

[dependencies]
actix-web = "4"
thiserror = "1"
validator = { version = "0.18", optional = true }
garde = { version = "0.20", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
validator = { version = "0.18", features = ["derive"] }
garde = { version = "0.20", features = ["derive"] }
derive_more = { version = "1", features = ["display"] }

[features]

# Use validator crate (https://github.com/Keats/validator) as the validation implmentation
validator = ["dep:validator"]

# Use garde crate (https://github.com/jprochazk/garde) as the validation implmentation
garde = ["dep:garde"]

# Use custom validation implmentation (no external validation library)
custom = []

[package.metadata.docs.rs]
all-features = true

